Fix T94085: Crash with empty stroke list